show documents as form when selected

--- a/templates/sidenav.html
+++ b/templates/sidenav.html
@@ -1,5 +1,5 @@
-<div class="fixed left-0 top-0 w-64 h-full bg-[#f8f4f3] p-4 z-50 sidebar-menu transition-transform">
-  <a href="#" class="flex items-center pb-4 border-b border-b-gray-800">
+<div class="w-64 h-full bg-[#f8f4f3] p-4 z-50 sidebar-menu transition-transform">
+  <a href="/" class="flex items-center pb-4 border-b border-b-gray-800">
     <h2 class="font-bold text-2xl">
       <span class="bg-[#f84525] text-white px-2 rounded-md">
         {{ eqms.name }}
@@ -10,7 +10,7 @@
     {% for folder, folder_content in eqms.qms_documents.folders.items %}
         <span class="text-gray-400 font-bold">{{ folder }}</span>
         {% for document in folder_content.documents %}
-            <a href=""
+            <a href="/document/{{ document.uuid }}"
                class="flex font-semibold mb-1 group items-center py-2 px-4
                       text-gray-900 hover:bg-gray-950 hover:text-gray-100
                       rounded-md"
@@ -22,4 +22,3 @@
     {% endfor %}
   </div>
 </div>
-<div class="fixed top-0 left-0 w-full h-full bg-black/50 z-40 md:hidden sidebar-overlay"></div>
